# encdet

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  autogen.sh  configure.ac
man/: Makefile.am  encdet.3.pod
src/: Makefile.am  encdet.cpp  encdet.h  nscore.h  prmem.h
test/: EUC-JP.txt  ISO-2022-JP.txt  Makefile.am  Shift_JIS.txt  UTF-16.txt  UTF-8.txt  encdet.c  test.sh
