lib_LTLIBRARIES = libencdet.la
include_HEADERS = encdet.h
libencdet_la_LDFLAGS = -version-info $(LTVERSION)
libencdet_la_SOURCES = encdet.cpp encdet.h \
                       Big5Freq.tab \
                       CharDistribution.cpp CharDistribution.h \
                       EUCKRFreq.tab \
                       EUCTWFreq.tab \
                       GB2312Freq.tab \
                       JISFreq.tab \
                       JpCntx.cpp JpCntx.h \
                       LangBulgarianModel.cpp \
                       LangCyrillicModel.cpp \
                       LangGreekModel.cpp \
                       LangHebrewModel.cpp \
                       LangHungarianModel.cpp \
                       LangThaiModel.cpp \
                       nsBig5Prober.cpp nsBig5Prober.h \
                       nsCharSetProber.cpp nsCharSetProber.h \
                       nsCodingStateMachine.h \
                       nsEUCJPProber.cpp nsEUCJPProber.h \
                       nsEUCKRProber.cpp nsEUCKRProber.h \
                       nsEUCTWProber.cpp nsEUCTWProber.h \
                       nsEscCharsetProber.cpp nsEscCharsetProber.h \
                       nsEscSM.cpp \
                       nsGB2312Prober.cpp nsGB2312Prober.h \
                       nsHebrewProber.cpp nsHebrewProber.h \
                       nsLatin1Prober.cpp nsLatin1Prober.h \
                       nsMBCSGroupProber.cpp nsMBCSGroupProber.h \
                       nsMBCSSM.cpp \
                       nsPkgInt.h \
                       nsSBCSGroupProber.cpp nsSBCSGroupProber.h \
                       nsSBCharSetProber.cpp nsSBCharSetProber.h \
                       nsSJISProber.cpp nsSJISProber.h \
                       nsUTF8Prober.cpp nsUTF8Prober.h \
                       nsUniversalDetector.cpp nsUniversalDetector.h \
                       nscore.h \
                       prmem.h
